--- a/index.html
+++ b/index.html
@@ -85,25 +85,78 @@
                 <h1 class="text_darkblue">Confira nossas ofertas </h1>
 
                 <div class="produtos">
-                    <img class="image_produtos" src="images/tenis.png" alt="tenis">
-                    <img class="image_produtos" src="images/camisa_m.png" alt="camisa_m">
-                    <img class="image_produtos" src="images/camisa_f.png" alt="camisa_f">
-                    <img class="image_produtos" src="images/calca_d.png" alt="calca_d">
 
-                    <button class="comprar">Comprar</button>
-                    <button class="comprar">Comprar</button>
-                    <button class="comprar">Comprar</button>
-                    <button class="comprar">Comprar</button>
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/tenis.png" alt="tenis">
+                        <button class="comprar">Comprar</button>
+                    </div>
 
-                    <img class="image_produtos" src="images/tornozeleira.png" alt="tornozeleira">
-                    <img class="image_produtos" src="images/rolo_abdominal.png" alt="rolo_abdominal">
-                    <img class="image_produtos" src="images/suplemento.png" alt="suplemento">
-                    <img class="image_produtos" src="images/fita.png" alt="fita">
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/camisa_m.png" alt="camisa_m">
+                        <button class="comprar">Comprar</button>
+                    </div>
 
-                    <button class="comprar">Comprar</button>
-                    <button class="comprar">Comprar</button>
-                    <button class="comprar">Comprar</button>
-                    <button class="comprar">Comprar</button>
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/camisa_f.png" alt="camisa_f">
+                        <button class="comprar">Comprar</button>
+                    </div>
+
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/calca_d.png" alt="calca_d">
+                        <button class="comprar">Comprar</button>
+                    </div>
+
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/tornozeleira.png" alt="tornozeleira">
+                        <button class="comprar">Comprar</button>
+                    </div>
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/rolo_abdominal.png" alt="rolo_abdominal">
+                        <button class="comprar">Comprar</button>
+                    </div>
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/suplemento.png" alt="suplemento">
+                        <button class="comprar">Comprar</button>
+                    </div>
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/fita.png" alt="fita">
+
+                        <button class="comprar">Comprar</button>
+                    </div>
+
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/tenis.png" alt="tenis">
+                        <button class="comprar">Comprar</button>
+                    </div>
+
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/camisa_m.png" alt="camisa_m">
+                        <button class="comprar">Comprar</button>
+                    </div>
+
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/camisa_f.png" alt="camisa_f">
+                        <button class="comprar">Comprar</button>
+                    </div>
+
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/calca_d.png" alt="calca_d">
+                        <button class="comprar">Comprar</button>
+                    </div>
+
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/tornozeleira.png" alt="tornozeleira">
+                        <button class="comprar">Comprar</button>
+                    </div>
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/rolo_abdominal.png" alt="rolo_abdominal">
+                        <button class="comprar">Comprar</button>
+                    </div>
+                    <div class="produto_comprar">
+                        <img class="image_produtos" src="images/suplemento.png" alt="suplemento">
+                        <button class="comprar">Comprar</button>
+                    </div>
+                    
                 </div>
     
             </div>
